[gd_scene load_steps=12 format=2]

[ext_resource path="res://Audio/Radio Tracks/Emerald Snow _1.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Radio Tracks/shutin.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Radio Tracks/Decay.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Radio Tracks/dellicate.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Radio Tracks/Entropy.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/bumps/bump3.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/bumps/bump2.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/bumps/bump5.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/bumps/bump4.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/bumps/bump1.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/Radio.gd" type="Script" id=11]

[node name="Radio" type="Node2D"]
script = ExtResource( 11 )

[node name="bumps" type="Node2D" parent="."]

[node name="bump1" type="AudioStreamPlayer2D" parent="bumps"]
stream = ExtResource( 10 )
volume_db = -3.532
bus = "Radio"

[node name="bump2" type="AudioStreamPlayer2D" parent="bumps"]
stream = ExtResource( 7 )
volume_db = -5.244
bus = "Radio"

[node name="bump3" type="AudioStreamPlayer2D" parent="bumps"]
stream = ExtResource( 6 )
volume_db = -5.244
bus = "Radio"

[node name="bump4" type="AudioStreamPlayer2D" parent="bumps"]
stream = ExtResource( 9 )
volume_db = -3.328
bus = "Radio"

[node name="bump5" type="AudioStreamPlayer2D" parent="bumps"]
stream = ExtResource( 8 )
volume_db = -4.37
bus = "Radio"

[node name="songs" type="Node2D" parent="."]

[node name="song2" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource( 3 )
volume_db = 3.496
bus = "Radio"

[node name="song3" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource( 4 )
volume_db = 4.37
bus = "Radio"

[node name="song4" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource( 1 )
volume_db = 3.963
bus = "Radio"

[node name="song5" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource( 5 )
volume_db = 2.622
bus = "Radio"

[node name="song1" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource( 2 )
volume_db = -6.991

[connection signal="finished" from="bumps/bump1" to="." method="_on_bump1_finished"]
[connection signal="finished" from="bumps/bump2" to="." method="_on_bump2_finished"]
[connection signal="finished" from="bumps/bump3" to="." method="_on_bump3_finished"]
[connection signal="finished" from="bumps/bump4" to="." method="_on_bump4_finished"]
[connection signal="finished" from="bumps/bump5" to="." method="_on_bump5_finished"]
[connection signal="finished" from="songs/song2" to="." method="_on_song2_finished"]
[connection signal="finished" from="songs/song3" to="." method="_on_song3_finished"]
[connection signal="finished" from="songs/song4" to="." method="_on_song4_finished"]
[connection signal="finished" from="songs/song5" to="." method="_on_song5_finished"]
[connection signal="finished" from="songs/song1" to="." method="_on_song1_finished"]
